--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+  <h1><a href="https://www.facebook.com">周冠甄</a>的自我介紹</h1>
+  </head>
+  
+  <body>
+    <img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/1528498_10203160937563785_4841312721343473396_n.jpg?oh=906498c2a2061a6e698260f848cb4915&oe=55BC21B4&__gda__=1433612685_dea029c6373f921d9f7926b4cb43dfda">
+ 
+   <h3>最新一集的海賊王什麼時候要出啊!?等好久了~之前人魚島有夠難看，好不容易感覺要變好看了~尾田不要讓我失望啊</h3>
+  
+
+  	<h4>我最想吃的惡魔果實排行榜</h4>	
+
+			<ul type="square">
+				<li>花花果實</li>
+				<li>肉球果實</li>
+				<li>手術果實</li>
+			</ul> 
+  </body>
 </html>
